samples/_failures_safe/1761152822_96b069_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_44cc046f.c: In function ‘main’:
./samples/SAFE/__tmp_44cc046f.c:145:27: error: expected ‘)’ at end of input
  145 |     if (strlen(input_text)
      |        ~                  ^
      |                           )
./samples/SAFE/__tmp_44cc046f.c:145:5: error: expected declaration or statement at end of input
  145 |     if (strlen(input_text)
      |     ^~
